tests/NormalTests/paczka2/big_fuzzy/42076756.err
Error in line 8: tqPO A471 7,9
Error in line 9: Dzpk S189 69,3
Error in line 17: Dzpk A471 85,98
Error in line 24: OqKTxF S189 70,8
Error in line 22: tqPO S361 99,2
Error in line 27: tqPO A471 -5,5
Error in line 31: OqKTxF A90 48,9
Error in line 29: S189 S361 13,9
Error in line 32: OqKTxF A471 42,5
Error in line 26: tqPO A471 74,7
Error in line 11: Dzpk S361 42,8
Error in line 40: Dzpk A471 295,2
Error in line 48: 6GWRUQ A471 22,5
Error in line 49: 6GWRUQ A90 10,2
Error in line 56: EoKN0e A471 90,3
Error in line 62: S189 A471 72,4
Error in line 38: tqPO A90 79,8
Error in line 73: tqPO S361 9,7
Error in line 77: tqPO A471 34,9
Error in line 84: tqPO S189 98,8
Error in line 89: 6GWRUQ S361 93,8
Error in line 82: S189 A90 4,0
Error in line 95: S189 S189 96,1
Error in line 99: S189 A90 30,7
Error in line 104: tqPO A90 110,9
Error in line 111: EoKN0e A90 93,3
Error in line 116: S189 S361 64,7
Error in line 121: EoKN0e S189 9,0
Error in line 130: Cgn S361 110,63
Error in line 129: EoKN0e A90 49,9
Error in line 143: 6GWRUQ A471 1,6
Error in line 132: tqPO A90 41,1
Error in line 152: EoKN0e S361 137,5
Error in line 150: Dzpk S361 21,9
Error in line 159: Dzpk A90 83,7
Error in line 154: tqPO S189 105,8
Error in line 175: Dzpk A90 166,7
Error in line 170: OqKTxF A471 102,2
Error in line 180: OqKTxF S189 72,0
Error in line 185: EoKN0e S189 88,1
Error in line 190: 6GWRUQ S189 99,2
Error in line 191: Cgn A471 18,3
Error in line 194: Cgn S361 34,6
Error in line 197: tqPO A90 97,7
Error in line 189: EoKN0e S361 313,5
Error in line 200: tqPO S361 60,4
Error in line 203: EoKN0e S189 72,6
Error in line 216: tqPO A90 60,3
Error in line 218: Cgn S361 70,2
Error in line 221: S189 S189 42,7
Error in line 232: S189 A471 44,7
Error in line 235: 6GWRUQ A471 86,5
Error in line 244: OqKTxF A90 59,4
